--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     padding-top: 100px;
 }
 
+body {
+    background-image: url('assets/grid3.png');
+    background-repeat: repeat; /* Ou 'repeat-x', 'repeat-y', 'no-repeat' */
+}
 
 /* Contador */
 .countup {
@@ -35,6 +39,8 @@
 /* Slider */
 .container-fluid {
     padding: 0;
+    width: 80%;
+  height: 80%;
 }
 
 #mainSlider .carousel-caption {
@@ -56,7 +62,7 @@
     color: #ffffff;   
     width: 100px;
     height: 20px;
-    padding: 10px 20px;
+    padding: 6px 6px;
     border-radius: 30px;
     border: 3px solid transparent;
     text-decoration: none;
